# MCC

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
docs/: info.schema.json
example/: info.json  pkg.json
example/src/: add.mcc  all.mcc  bomb.mcc  exception.mcc  gold.mcc  hello.mcc  iterate.mcc  math.mcc  ping.mcc  plus.mcc  print.mcc  sphere.mcc  std.mcc  switch.mcc  user.mcc  vec3.mcc
include/mcc/: actions.hpp  attribute.hpp  block.hpp  builder.hpp  command.hpp  common.hpp  constant.hpp  context.hpp  enums.hpp  error.hpp  expression.hpp  format.hpp  function.hpp  instruction.hpp  intermediate.hpp  lex.hpp  module.hpp  package.hpp  parse.hpp  resource.hpp  result.hpp  statement.hpp  tree.hpp  type.hpp  value.hpp
map/: advancement.json  attribute.json  ban.json  ban_ip.json  banlist.json  bossbar.json  clear.json  clone.json  damage.json  data.json  datapack.json  debug.json  defaultgamemode.json  deop.json  difficulty.json  effect.json  enchant.json  execute.json  give.json  teleport.json  tellraw.json
src/: actions.cpp  builder.cpp  command.cpp  error.cpp  lex.cpp  main.cpp  package.cpp  parse.cpp  result.cpp  tree.cpp
src/builder/: allocate.cpp  builder.cpp  create.cpp  function.cpp  global.cpp  store_result.cpp  variable.cpp
src/parse/: next.cpp  parse.cpp  resource_location.cpp  type.cpp
src/tree/: attribute.cpp  expression.cpp  statement.cpp  tree.cpp
src/type/: any_array.cpp  any_function.cpp  any_object.cpp  array.cpp  boolean.cpp  function.cpp  null.cpp  number.cpp  object.cpp  string.cpp  tuple.cpp  type.cpp  type_context.cpp  union.cpp  (+1 more)
(+96 files in other folders)
